--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
     // ======= Configuración (EDITA ESTOS VALORES) =======
     // Opción A: StrawPoll (recomendado): pega aquí la URL de tu iframe de StrawPoll
     // Ejemplo: "https://strawpoll.com/embed/polls/REEMPLAZA_ID"
-    const POLL_IFRAME_URL = ""; // <- pega aquí el src del iframe de tu encuesta
+    const POLL_IFRAME_URL = "https://strawpoll.com/embed/QgrewJeXbyp";
 
     // Enlace a resultados oficiales (puede ser la misma plataforma de la encuesta)
-    const POLL_RESULTS_URL = ""; // <- URL pública de resultados
+    const POLL_RESULTS_URL = "https://strawpoll.com/QrgewJeXbyp";
 
     // ======= Lógica de interfaz =======
     const keyS = 'votes_snyder';
