--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
       <!-- Snyder Card -->
       <article class="card">
         <div class="media">
-          <img src="assets/snyder-superman.jpg" alt="Imagen representativa del Superman de Zack Snyder (estilo épico y oscuro)" />
+          <img src="manofsteel.jpg" alt="Imagen representativa del Superman de Zack Snyder (estilo épico y oscuro)" />
           <span class="badge">Zack Snyder</span>
         </div>
         <div class="body">
           <h2>Superman de Zack Snyder</h2>
           <p>
-            Enfoque más épico y reflexivo; explora el peso del poder y la identidad en un mundo complejo. Estética sobria y dramatismo elevado.
+            Enfoque más épico y reflexivo; explora el peso del poder y la identidad en un mundo complejo. Estética sobria y dramatismo elevado, interpretado por Henry Cavill.
           </p>
           <div class="stats">
             <div class="stat" title="Votos locales (solo en tu dispositivo)">🗳️ <span id="local-snyder">0</span> votos locales</div>
@@ -114,13 +114,13 @@
       <!-- Gunn Card -->
       <article class="card">
         <div class="media">
-          <img src="assets/gunn-superman.jpg" alt="Imagen representativa del Superman de James Gunn (tono luminoso y esperanzador)" />
+          <img src="assets/superman.jpg" alt="Imagen representativa del Superman de James Gunn (tono luminoso y esperanzador)" />
           <span class="badge">James Gunn</span>
         </div>
         <div class="body">
           <h2>Superman de James Gunn</h2>
           <p>
-            Tono luminoso y optimista; resalta la esperanza, la empatía y el heroísmo clásico con guiños a la Edad de Plata y energía contemporánea.
+            Tono luminoso y optimista; resalta la esperanza, la empatía y el heroísmo clásico con guiños a la Edad de Plata y energía contemporánea, interpretado por David Corenswet.
           </p>
           <div class="stats">
             <div class="stat" title="Votos locales (solo en tu dispositivo)">🗳️ <span id="local-gunn">0</span> votos locales</div>
