--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <!-- Snyder Card -->
       <article class="card">
         <div class="media">
-          <img src="manofsteel.jpg" alt="Imagen representativa del Superman de Zack Snyder (estilo épico y oscuro)" />
+          <img src="assets/manofsteel.jpg" alt="Imagen representativa del Superman de Zack Snyder (estilo épico y oscuro)" />
           <span class="badge">Zack Snyder</span>
         </div>
         <div class="body">
