--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     // ======= Configuración (EDITA ESTOS VALORES) =======
     // Opción A: StrawPoll (recomendado): pega aquí la URL de tu iframe de StrawPoll
     // Ejemplo: "https://strawpoll.com/embed/polls/REEMPLAZA_ID"
-    const POLL_IFRAME_URL = "https://strawpoll.com/embed/QgrewJeXbyp";
+    const POLL_IFRAME_URL = "https://strawpoll.com/QgrewJeXbyp";
 
     // Enlace a resultados oficiales (puede ser la misma plataforma de la encuesta)
     const POLL_RESULTS_URL = "https://strawpoll.com/QrgewJeXbyp";
